test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/pointer_conversions/usual_arithmetic_conversions_ptr.plx
pub fn main(none) i32 {
    #  can't convert void * to int with usual arithmetic conversions
    i: i32 = 10 * cast<*any>(0)
}
